# engy

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  meson.build
shaders/: fragment.glsl  vertex.glsl
src/: asset.cpp  asset.h  block.cpp  block.h  camera.cpp  camera.h  chunk.cpp  chunk.h  config.h  exceptions.h  image.cpp  image.h  main.cpp  main.h  mesh_builder.cpp  mesh_builder.h  render.cpp  render.h  util.h
src/math/: aabb.cpp  aabb.h  matrix.cpp  matrix.h  scene.cpp  scene.h  vector.h
src/render/: chunk_mesh.cpp  chunk_mesh.h  fullscreen_pass.cpp  fullscreen_pass.h  texture_map.cpp  texture_map.h
src/shaders/: chunk.fragment.glsl  chunk.vertex.glsl  chunk.vertex.glsl.1  color.glsl  common.glsl  fragment_common.glsl  fullscreen.vertex.glsl  sky.fragment.glsl  triangle.fragment.glsl  triangle.vertex.glsl
src/vulkan/: debug.h  device.cpp  device.h  memory.cpp  memory.h  mesh.cpp  mesh.h  pipeline.h  renderer.cpp  renderer.h  staging.cpp  staging.h  texture_map.cpp  texture_map.h  vma.cpp
